fix: expenses wrap

--- a/components/bun/bun.module.scss
+++ b/components/bun/bun.module.scss
@@ -1,5 +1,5 @@
 .category {
-	@apply rounded-full w-20 h-20 flex flex-col justify-center items-center relative mr-2 border-4 bg-slate-600 bg-opacity-50 shadow-md;
+	@apply rounded-full w-20 h-20 flex flex-col justify-center items-center relative mr-2 border-4 bg-slate-600 bg-opacity-50 shadow-md mb-2;
 	&__name {
 		@apply font-semibold;
 	}
